[Aman]ADD: Added the wishlist part
