# app/models/wishlist.rb
@@ -1,0 +1,14 @@
+class Wishlist < ApplicationRecord
+  belongs_to :user
+  belongs_to :movie
+
+  validates :user_id, uniqueness: { scope: :movie_id, message: "Movie is already in your wishlist" }
+
+  def self.ransackable_attributes(auth_object = nil)
+    ["created_at", "movie_id", "updated_at", "user_id"]
+  end
+
+  def self.ransackable_associations(auth_object = nil)
+    ["movie", "user"]
+  end
+end
